--- a/lib/kamansky_web/live/stamp_live/index.html.heex
+++ b/lib/kamansky_web/live/stamp_live/index.html.heex
@@ -33,31 +33,32 @@
       sort: 0
     ]
   do %>
-    <td>
-      <%= live_patch @item.scott_number,
-        to: Routes.stamp_index_path(@socket, :show, @item)
-      %>
-    </td>
-    <td><%= Stamp.formatted_grade(@item) %></td>
-    <td><%= format_decimal_as_currency(Stamp.total_cost(@item)) %></td>
-    <td><%= Stamp.formatted_flaws(@item) %></td>
-    <td>
-      <%= live_patch to: Routes.stamp_index_path(@socket, :edit, @item), class: "action-icon" do %>
-        <i class="material-icons">edit</i>
-      <% end %>
-      <%= if @item.status == :collection do %>
-        <%= live_patch to: Routes.stamp_index_path(@socket, :move_to_stock, @item),
-          class: "action-icon"
-        do %>
-          <i class="material-icons">inventory_2</i>
+    <% stamp -> %>
+      <td>
+        <%= live_patch stamp.scott_number,
+          to: Routes.stamp_index_path(@socket, :show, stamp)
+        %>
+      </td>
+      <td><%= Stamp.formatted_grade(stamp) %></td>
+      <td><%= format_decimal_as_currency(Stamp.total_cost(stamp)) %></td>
+      <td><%= Stamp.formatted_flaws(stamp) %></td>
+      <td>
+        <%= live_patch to: Routes.stamp_index_path(@socket, :edit, stamp), class: "action-icon" do %>
+          <i class="material-icons">edit</i>
         <% end %>
-      <% end %>
-      <%= if @item.status != :listed do %>
-        <%= live_patch to: Routes.stamp_index_path(@socket, :sell, @item), class: "action-icon" do %>
-          <i class="material-icons">attach_money</i>
+        <%= if stamp.status == :collection do %>
+          <%= live_patch to: Routes.stamp_index_path(@socket, :move_to_stock, stamp),
+            class: "action-icon"
+          do %>
+            <i class="material-icons">inventory_2</i>
+          <% end %>
         <% end %>
-      <% end %>
-    </td>
+        <%= if stamp.status != :listed do %>
+          <%= live_patch to: Routes.stamp_index_path(@socket, :sell, stamp), class: "action-icon" do %>
+            <i class="material-icons">attach_money</i>
+          <% end %>
+        <% end %>
+      </td>
   <% end %>
 </section>
 <%= if @live_action in [:new, :edit] do %>
