--- a/lib/kamansky_web/live/customer_live/index.html.heex
+++ b/lib/kamansky_web/live/customer_live/index.html.heex
@@ -28,16 +28,17 @@
       sort: 0
     ]
   do %>
-  <td><%= @item.name %></td>
-  <td><%= Customer.full_address(@item) %></td>
-  <td><%= Customer.formatted_email(@item) %></td>
-  <td><%= format_decimal_as_currency(@item.amount_spent_ytd) %></td>
-  <td><%= formatted_date(@item.most_recent_order_date) %></td>
-  <td>
-    <%= live_patch to: Routes.customer_index_path(@socket, :edit, @item), class: "action-icon" do %>
-      <i class="material-icons">edit</i>
-    <% end %>
-  </td>
+    <% customer -> %>
+      <td><%= customer.name %></td>
+      <td><%= Customer.full_address(customer) %></td>
+      <td><%= Customer.formatted_email(customer) %></td>
+      <td><%= format_decimal_as_currency(customer.amount_spent_ytd) %></td>
+      <td><%= formatted_date(customer.most_recent_order_date) %></td>
+      <td>
+        <%= live_patch to: Routes.customer_index_path(@socket, :edit, customer), class: "action-icon" do %>
+          <i class="material-icons">edit</i>
+        <% end %>
+      </td>
   <% end %>
 </section>
 <%= if @live_action == :edit do %>
