--- a/lib/kamansky_web/live/listing_live/sold.html.heex
+++ b/lib/kamansky_web/live/listing_live/sold.html.heex
@@ -28,15 +28,16 @@
     ],
     parent_action: :sold
   do %>
-    <td><%= @item.stamp.scott_number %></td>
-    <td><%= formatted_date(@item.order.ordered_at) %></td>
-    <td class="text-success"><%= format_decimal_as_currency(@item.sale_price) %></td>
-    <td class="<%= if Decimal.eq?(Stamp.total_cost(@item.stamp), 0), do: "", else: "text-danger" %>">
-      <%= format_decimal_as_currency(Stamp.total_cost(@item.stamp)) %>
-    </td>
-    <td class="<%= if Decimal.gt?(Listing.net_profit(@item), 0), do: "text-success", else: "text-danger" %>">
-      <%= format_decimal_as_currency(Listing.net_profit(@item)) %>
-    </td>
+    <% listing -> %>
+      <td><%= listing.stamp.scott_number %></td>
+      <td><%= formatted_date(listing.order.ordered_at) %></td>
+      <td class="text-success"><%= format_decimal_as_currency(listing.sale_price) %></td>
+      <td class={if Decimal.eq?(Stamp.total_cost(listing.stamp), 0), do: "", else: "text-danger"}>
+        <%= format_decimal_as_currency(Stamp.total_cost(listing.stamp)) %>
+      </td>
+      <td class={if Decimal.gt?(Listing.net_profit(listing), 0), do: "text-success", else: "text-danger"}>
+        <%= format_decimal_as_currency(Listing.net_profit(listing)) %>
+      </td>
   <% end %>
   <ul class="nav nav-pills justify-content-center">
     <li class="nav-item">
