--- a/lib/kamansky_web/live/purchase_live/index.html.heex
+++ b/lib/kamansky_web/live/purchase_live/index.html.heex
@@ -33,15 +33,16 @@
       sort: 0
     ]
   do %>
-  <td><%= formatted_date(@item.date) %></td>
-  <td><%= @item.description %></td>
-  <td><%= @item.quantity %></td>
-  <td><%= format_decimal_as_currency(@item.total_cost) %></td>
-  <td>
-    <%= live_patch to: "#", class: "action-icon" do %>
-      <i class="material-icons">edit</i>
-    <% end %>
-  </td>
+    <% purchase -> %>
+      <td><%= formatted_date(purchase.date) %></td>
+      <td><%= purchase.description %></td>
+      <td><%= purchase.quantity %></td>
+      <td><%= format_decimal_as_currency(purchase.total_cost) %></td>
+      <td>
+        <%= live_patch to: "#", class: "action-icon" do %>
+          <i class="material-icons">edit</i>
+        <% end %>
+      </td>
   <% end %>
 </section>
 <%= if @live_action in [:new, :edit] do %>
