--- a/lib/kamansky_web/templates/layout/root.html.heex
+++ b/lib/kamansky_web/templates/layout/root.html.heex
@@ -7,8 +7,8 @@
     <%= csrf_meta_tag() %>
     <%= live_title_tag assigns[:page_title] %>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>" />
-    <script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
+    <link rel="stylesheet" href={Routes.static_path(@conn, "/css/app.css")} />
+    <script defer type="text/javascript" src={Routes.static_path(@conn, "/js/app.js")}></script>
   </head>
   <body>
     <%= @inner_content %>
