--- a/lib/kamansky_web/templates/layout/live.html.heex
+++ b/lib/kamansky_web/templates/layout/live.html.heex
@@ -76,7 +76,7 @@
     <.form
       let={f}
       for={:login}
-      url={Routes.session_path(@socket, :create)}
+      action={Routes.session_path(@socket, :create)}
       class="row row-cols-md-auto p-3 align-items-center justify-content-center"
     >
       <div class="col">
