--- a/lib/kamansky_web/live/stamp_live/listing_form_component.html.heex
+++ b/lib/kamansky_web/live/stamp_live/listing_form_component.html.heex
@@ -1,9 +1,8 @@
 <div class="form-wrapper">
-
   <.form
     let={f}
     for={@changeset}
-    id={@myself}
+    id={@form_id}
     phx_target={@myself}
     phx_change="validate"
     phx_submit="submit"
