--- a/lib/kamansky_web/live/listing_live/sold.html.heex
+++ b/lib/kamansky_web/live/listing_live/sold.html.heex
@@ -29,7 +29,11 @@
     parent_action: :sold
   do %>
     <% listing -> %>
-      <td><%= listing.stamp.scott_number %></td>
+      <td>
+        <%= live_redirect listing.stamp.scott_number,
+          to: Routes.stamp_index_path(@socket, :show, listing.stamp, from: @live_action)
+        %>
+      </td>
       <td><%= formatted_date(listing.order.ordered_at) %></td>
       <td class="text-success"><%= format_decimal_as_currency(listing.sale_price) %></td>
       <td class={if Decimal.eq?(Stamp.total_cost(listing.stamp), 0), do: "", else: "text-danger"}>
