--- a/lib/kamansky_web/live/purchase_live/index.html.heex
+++ b/lib/kamansky_web/live/purchase_live/index.html.heex
@@ -37,7 +37,7 @@
       <td><%= formatted_date(purchase.date) %></td>
       <td><%= purchase.description %></td>
       <td><%= purchase.quantity %></td>
-      <td><%= format_decimal_as_currency(purchase.total_cost) %></td>
+      <td><%= format_decimal_as_currency(Purchase.total_cost(purchase)) %></td>
       <td>
         <%= live_patch to: "#", class: "action-icon" do %>
           <i class="material-icons">edit</i>
