--- a/lib/kamansky_web/live/trend_live/index.html.heex
+++ b/lib/kamansky_web/live/trend_live/index.html.heex
@@ -14,7 +14,7 @@
     empty_message: "There are no stamps to display.",
     options: [
       go_to_record: Map.get(assigns, :go_to_record),
-      sort: 1
+      sort: %{column: 1, direction: :desc}
     ]
   do %>
     <% stamp -> %>
