--- a/lib/kamansky_web/live/trend_live/index.html.heex
+++ b/lib/kamansky_web/live/trend_live/index.html.heex
@@ -15,5 +15,19 @@
         </div>
       </div>
     </div>
+    <div class="col-md-3">
+      <div class="card h-100">
+        <div class="card-body">
+          <h4 class="card-title">By Grade</h4>
+          <p class="card-text">
+            <canvas 
+              id="trends-grade" 
+              phx-hook="grade" 
+              data-letter-grade={@letter_grade_data}
+            />
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
