--- a/lib/kamansky_web/live/trend_live/index.html.heex
+++ b/lib/kamansky_web/live/trend_live/index.html.heex
@@ -29,5 +29,24 @@
         </div>
       </div>
     </div>
+    <div class="col-md-3">
+      <div class="card h-100">
+        <div class="card-body">
+          <h4 class="card-title">Median Price</h4>
+          <p class="card-text">
+            <table class="table">
+              <tbody>
+                <%= for class <- Stamp.grade_classes() do %>
+                  <tr>
+                    <td><%= class.name %></td>
+                    <td><%= format_decimal_as_currency(Map.get(@median_sold_price_data, class.name, 0)) %></td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
