--- a/lib/kamansky_web/live/trend_live/index.html.heex
+++ b/lib/kamansky_web/live/trend_live/index.html.heex
@@ -60,6 +60,7 @@
                 <tr>
                   <th>Era</th>
                   <th>Sales ($)</th>
+                  <th>Cost ($)</th>
                   <th>% of Total Sales</th>
                 </tr>
               </thead>
@@ -68,6 +69,7 @@
                   <tr>
                     <td><%= era %></td>
                     <td><%= format_decimal_as_currency(data.total_sales_income) %></td>
+                    <td><%= format_decimal_as_currency(data.total_cost) %></td>
                     <td><%= data.percentage_of_total_sales %></td>
                   </tr>
                 <% end %>
