--- a/lib/kamansky_web/live/trend_live/index.html.heex
+++ b/lib/kamansky_web/live/trend_live/index.html.heex
@@ -75,7 +75,7 @@
                     <td><%= format_decimal_as_currency(data.total_cost) %></td>
                     <td><%= data.percentage_of_total_sales %></td>
                     <td><%= data.percentage_of_total_listings %></td>
-                    <td><%= %></td>
+                    <td><%= data.conversion_percentage %></td>
                     <td><%= data.average_listing_time %> days</td>
                   </tr>
                 <% end %>
