--- a/lib/kamansky_web/live/trend_live/sold.html.heex
+++ b/lib/kamansky_web/live/trend_live/sold.html.heex
@@ -5,6 +5,7 @@
       [
         "Scott Number",
         "Total Sold",
+        "Conversion %",
         "Median Sale Price",
         "Total Profit"
       ],
@@ -19,6 +20,7 @@
   do %>
     <% stamp -> %>
       <td><%= stamp.scott_number %></td>
+      <td><%= stamp.conversion_percentage %></td>
       <td><%= stamp.total_sold %></td>
       <td><%= format_decimal_as_currency(stamp.median_sale_price) %></td>
       <td><%= format_decimal_as_currency(stamp.total_profit) %></td>
